tests/corpus/newtype/expr/cond_malformed_no_comparison.txt
A cond with a malformed comparison expression

=======

cond do
    a -> b,
end

=======

=======

[E0001] Error: Syntax error
   ╭─[ <stdin>:2:5 ]
   │
 2 │     a -> b,
   │     ┬
   │     ╰── Left hand side of condition branch is missing comparison.
───╯
